# indy7_mr_control

./: README.md
cpp/: CMakeLists.txt  start_pybullet_server.sh
cpp/bullet3/: CMakeLists.txt
cpp/lib/: ModernRobotics.cpp  ModernRobotics.h
cpp/src/: Indy7.cpp  Indy7.h  main.cpp
functions/: MR_info.json  indy7_urdf_loader.py  utils.py
joint_control/: sim.py
model/: IndyDualArm.urdf  axis.urdf  body.urdf  box.urdf  indy7.urdf  plane.urdf
model/meshes/visual/: axis.mtl  body.stl  mask.mtl  neck.stl  neck1.stl  neck2.mtl  table.stl
python/: Indy7.py
python/FT_sensor/: box.urdf  cylinder.mat  cylinder.stl  cylinder.urdf  make_cylinder.m  monkey.mat  monkey.ply  monkey.stl  monkey.urdf  object.urdf  plane.urdf  ply_load.m  satelite.ply  sim.py  sim_pointcloud.py  sim_robot.py  sphere.urdf  untitled.m
python/Scurve_Trajectory/: draw_functions.py  scruve_test.py  sim.py
python/dual_arm_control/: MR_info.json  sim.py
python/joint_control/: sim.py
python/joint_impedance_control/: sim.py
python/task_impedance_control/: sim.py
python/task_space_control/: README.md  output.json  sim.py  sim_analytic.py  sim_screw.py  sim_screw_scurve.py  timings_0.json  timings_1.json  trajectory.json
